feat(ugfx): ugfx to 2.9

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "spi_devices/lcd/Adafruit-GFX-Library"]
-	path = spi_devices/lcd/Adafruit-GFX-Library
+[submodule "components/spi_devices/lcd/Adafruit-GFX-Library"]
+	path = components/spi_devices/lcd/Adafruit-GFX-Library
 	url = https://github.com/adafruit/Adafruit-GFX-Library.git
 [submodule "components/ugfx_gui/ugfx"]
 	path = components/ugfx_gui/ugfx
-	url = https://github.com/InfiniteYuan1/ugfx.git
+	url = https://git.ugfx.io/ugfx/ugfx.git
